--- a/package.json
+++ b/package.json
@@ -61,5 +61,8 @@
     "tsdx": "^0.14.1",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
+  },
+  "resolutions": {
+    "**/typescript": "^4.7.4"
   }
 }
