--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "autoprefixer": "^10.4.7",
+    "classnames": "^2.3.1",
     "husky": "^8.0.1",
     "less": "^4.1.3",
     "postcss": "^8.4.14",
