--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
     "typescript": "^4.7.4"
   },
   "resolutions": {
-    "**/typescript": "^4.7.4"
+    "**/typescript": "^4.7.4",
+    "**/@typescript-eslint/eslint-plugin": "^4.",
+    "**/@typescript-eslint/parser": "^4"
   }
 }
