--- a/example/package.json
+++ b/example/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html --no-minify"
   },
   "dependencies": {
     "react-app-polyfill": "^1.0.0"
@@ -16,10 +16,10 @@
     "scheduler/tracing": "../node_modules/scheduler/tracing-profiling"
   },
   "devDependencies": {
-    "@parcel/transformer-less": "2.6.2",
-    "@types/react": "^16.9.11",
-    "@types/react-dom": "^16.8.4",
-    "parcel": "1.12.3",
-    "typescript": "^3.4.5"
+    "@parcel/transformer-less": "2.9.3",
+    "@types/react": "^16",
+    "@types/react-dom": "^16",
+    "parcel-bundler": "^1.12.5",
+    "typescript": "^4"
   }
 }
